# dma-prony-validation

./: .gitignore  README.md  commands.txt  pyproject.toml
config/epdm_70/: base.json
config/experiments/: shaker_118g.json  shaker_1195g.json  shaker_258g.json  shaker_573g.json
config/material_a/: base.json
config/shaker/: 01g_118g.json  01g_1195g.json  01g_253g.json  01g_258g.json  01g_573g.json  1g_118g.json  1g_1195g.json  1g_1196g.json  1g_573g.json
core/: mechanics.py  plots.py  tts.py
data/epdm_70/dma/: sd_100hz.csv  sd_10hz.csv  tf_015p  tf_015p.csv
data/epdm_70/shaker/: 01g_118g.csv  01g_1196g.csv  01g_253g.csv  01g_573g.csv  1g_118g.csv  1g_1195g.csv  1g_1196g.csv  1g_128g.csv  1g_253g.csv  1g_258g.csv  1g_573g.csv
data/material_a/dma/: sd_100hz.csv  sd_10hz.csv  tf_015p.csv
data/material_a/shaker/: 1g_118g.csv  1g_1195g.csv  1g_1196g.csv  1g_253g.csv  1g_258g.csv  1g_573g.csv
data/raw/: README.md  process_dma.py  process_shaker.py
py27/: history_access.py  paths.py  shaker_csv.py
py3/: io.py  matrix_runner.py  paths.py  plots.py  sources.py
scripts/: build_fea_shaker.py  build_master_curve.py  fit_prony.py  plot_fea.py  process_shaker.py
